@@ -1,5 +1,9 @@
 2007-12-01  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to use pathname in filelogger.rb.
+
+2007-12-01  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed to highlight a current nickname in priority.
 	Fixed a nil access bug, when the parameters of a message are too few.
 
